# temp

interface/: CMakeLists.txt
interface/common/: check.h  convert.cpp  convert.h  marco.h  tecoal.cpp  tensor.cpp  tensor.h
interface/include/: builtin_type.h  tecoal.h
interface/ops/: activation_backward.cpp  activation_forward.cpp  add_tensor.cpp  arg_max.cpp  conv_forward.cpp  gemm.cpp  index_put.cpp  logical_not_tensor.cpp  masked_fill.cpp  masked_select.cpp  scale_tensor.cpp  scatter_nd_add.cpp  scatter_out.cpp  unary_ops.cpp  unique.cpp
ual/: CMakeLists.txt
ual/args/: activation_backward_args.h  activation_forward_args.h  add_tensor_args.h  arg_max_args.h  conv_args.h  gemm_args.h  index_put_args.h  logical_not_tensor_args.h  masked_fill_args.h  masked_select_args.h  scale_tensor_args.h  scatter_nd_add_args.h  scatter_out_args.h  unary_ops_args.h  unique_args.h
ual/com/: check.h  convert.hpp  def.h  dma_all_type.h  half.hpp  log.h
ual/kernel/: device.hpp  macro.h
ual/kernel/activation_backward/: activation_backward.h  activation_backward_ft16.scpp
ual/kernel/activation_forward/: activation_forward.h  activation_forward_ft16.scpp
ual/kernel/add_tensor/: add_tensor.h  add_tensor_ft16.scpp
ual/kernel/arg_max/: arg_max.h  arg_max_ft16.scpp
ual/kernel/conv_forward/: conv_forward.h  convolution_forward_ft16.scpp
ual/kernel/gemm/: gemm.h  gemm_ft16.scpp
ual/kernel/index_put/: index_put.h  index_put_int64.scpp
ual/kernel/logical_not_tensor/: logical_not_tensor.h  logical_not_tensor_bool.scpp
ual/kernel/unique/: unique.h  (+1 more)
ual/ops/: base_op.hpp
(+58 files in other folders)
